--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.5.4",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.19.2",
+    "formik": "^2.1.5",
     "next": "9.5.2",
     "react": "^16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "tailwindcss": "^1.6.2"
