--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.5.4",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
+    "evergreen-ui": "^5.1.2",
     "formik": "^2.1.5",
     "next": "9.5.2",
     "react": "^16.13.1",
