--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "antd": "^4.5.4",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
+    "dayjs": "^1.10.4",
     "evergreen-ui": "^5.1.2",
     "formik": "^2.2.6",
-    "moment": "^2.29.1",
     "next": "9.5.2",
     "react": "^16.14.0",
     "react-dom": "16.13.1",
