--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.10.4",
     "evergreen-ui": "^5.1.2",
     "formik": "^2.2.6",
+    "javascript-time-ago": "^2.3.4",
     "next": "9.5.2",
     "react": "^16.14.0",
     "react-dom": "16.13.1",
