--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "dayjs": "^1.10.4",
     "evergreen-ui": "^5.1.2",
+    "form-data": "^4.0.0",
     "formik": "^2.2.6",
     "javascript-time-ago": "^2.3.4",
     "next": "9.5.2",
